done without tours

--- a/themes/tohaAcademic-Dhiman/layouts/partials/cards/accomplishments.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/cards/accomplishments.html
@@ -12,7 +12,7 @@
     </div>
     <div class="card-footer">
       {{ if .certificateURL }}
-        <a class="btn btn-outline-info ml-1 pl-2 mb-2" href="{{ .certificateURL }}" target="_blank" rel="noopener" role="button">{{ i18n "view_certificate"}}</a>
+        <a class="btn btn-outline-info ml-1 pl-2 mb-2" href="{{ .certificateURL }}" target="_blank" rel="noopener" role="button">{{  "view more"}}</a>
       {{ end }}
     </div>
   </div>
