--- a/themes/tohaAcademic-Dhiman/layouts/partials/sections/research/researchPartial.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/sections/research/researchPartial.html
@@ -11,6 +11,11 @@
       </div>
       <div class="col-sm-6 pb-3">
         <p class="text-justify"> {{ .description | markdownify }} </p>
+        <p class="list-style"> {{ .description2 | markdownify }} </p>
+        <p class="list-style"> {{ .description3 | markdownify }} </p>
+        <p class="list-style"> {{ .description4 | markdownify }} </p>
+        <p class="list-style"> {{ .description5 | markdownify }} </p>
+        <p class="list-style"> {{ .description6 | markdownify }} </p>
       </div>
     </div>
 
