--- a/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
@@ -112,7 +112,7 @@
         {{ end }}
         {{ if $notesEnabled }}
           <li class="nav-item">
-            <a class="nav-link" id="note-link" href="{{ "/notes" | relLangURL }}">{{ i18n "notes" }}</a>
+            <a class="nav-link" id="note-link" href="{{ "http://shailysbog.blogspot.com/" | relLangURL }}">{{ i18n "notes" }}</a>
           </li>
         {{ end }}
         {{ range $customMenus }}
