--- a/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
@@ -112,7 +112,7 @@
         {{ end }}
         {{ if $notesEnabled }}
           <li class="nav-item">
-            <a class="nav-link" id="note-link" href="{{ "https://photos.app.goo.gl/HGLLUpdXM8W844UA9" | relLangURL }}">{{ i18n "notes" }}</a>
+            <a class="nav-link" id="note-link" href="{{ "https://photos.app.goo.gl/HGLLUpdXM8W844UA9" | relLangURL }}">{{ "Tours and Photography" }}</a>
           </li>
         {{ end }}
         {{ range $customMenus }}
