--- a/themes/tohaAcademic-Dhiman/layouts/partials/sections/research.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/sections/research.html
@@ -5,7 +5,7 @@
 
 <div class="container-fluid anchor pb-5" id="{{ $sectionID }}">
     {{ if not (.section.hideTitle) }}
-    <h1 class="text-center">{{ .section.name }}</h1></br>
+    <h1 class="text-center">{{ .section.name }}</h1>
     {{ end }}
     
     {{ if .researchInterest }}
