--- a/themes/tohaAcademic-Dhiman/layouts/partials/sections/research/researchPartial.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/sections/research/researchPartial.html
@@ -1,12 +1,12 @@
 <div class="container anchor about-section">  
-    <div class="container-fluid justify-content-center pb-3">
+    <div class="container-fluid justify-content-center">
       <div class="justify-content-center">
           <h5 class="text-justify" rel="noopener" style="color: #aa4e24">{{ .title | markdownify }} </h5>
       </div>
     </div>
 
     <div class="row pt-sm-2 pt-md-4 align-self-center">
-      <div class="col-sm-6 pb-3">
+      <div class="col-sm-6">
         <img class="align-self-center max-device-width" src="{{.image }}" alt="{{ .content }}">
       </div>
       <div class="col-sm-6 pb-3">
