--- a/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
@@ -107,12 +107,12 @@
         {{ end }}
         {{ if $blogEnabled }}
           <li class="nav-item">
-            <a class="nav-link" id="blog-link" href="{{ "http://shailysbog.blogspot.com/" | relLangURL }}">{{ i18n "posts" }}</a>
+            <a class="nav-link" id="blog-link" href="{{ "http://shailysbog.blogspot.com/" | relLangURL }}" target="_blank" rel="noopener">{{ i18n "posts" }}</a>
           </li>
         {{ end }}
         {{ if $notesEnabled }}
           <li class="nav-item">
-            <a class="nav-link" id="note-link" href="{{ "https://photos.app.goo.gl/HGLLUpdXM8W844UA9" | relLangURL }}">{{ "Tours and Photography" }}</a>
+            <a class="nav-link" id="note-link" href="{{ "https://photos.app.goo.gl/HGLLUpdXM8W844UA9" | relLangURL }}" target="_blank" rel="noopener">{{ "Tours and Photography" }}</a>
           </li>
         {{ end }}
         {{ range $customMenus }}
