--- a/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
@@ -112,7 +112,7 @@
         {{ end }}
         {{ if $notesEnabled }}
           <li class="nav-item">
-            <a class="nav-link" id="note-link" href="{{ "https://photos.app.goo.gl/HGLLUpdXM8W844UA9" | relLangURL }}" target="_blank" rel="noopener">{{ "Tours and Photography" }}</a>
+            <a class="nav-link" id="note-link" href="{{ "https://lh3.googleusercontent.com/qC4-5KMZkGQt8Dgh5SyzoABEkUhTgiyBC3siMyVU4F9TfnZtrn27IF2FU4AFGthuaM6GXNuXkktqw2Bm28YKtskQFW9kXMwRJyz0CF9V4ErWDciBmOGuFwkoGqhLNbL35mmu1Bxu3e4=w2400" | relLangURL }}" target="_blank" rel="noopener">{{ "Moments" }}</a>
           </li>
         {{ end }}
         {{ range $customMenus }}
