--- a/themes/tohaAcademic-Dhiman/layouts/partials/sections/publications/single-publication.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/sections/publications/single-publication.html
@@ -3,7 +3,7 @@
         {{ $item:= index .entry 0 }}
         <h4 rel="noopener" style="color: #aa4e24" >{{.publication.type}}</h4><br/>
         <!-- For single position, give emphasis on the designation-->
-        <h6 class="designation">{{ $item.title | markdownify }} {{ if $item.url }} <br>doi: <a href="https://doi.org/{{ $item.url }}">{{ $item.url }} </a> {{ end }}</h6> <br />
+        <h6 class="designation">{{ $item.title | markdownify }} {{ if $item.url }} <br>doi: <a href="https://doi.org/{{ $item.url }}" target="_blank">{{ $item.url }} </a> {{ end }}</h6> <br />
         
         <!-- Add experience duration info -->
     </div>
