--- a/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
@@ -112,7 +112,7 @@
         {{ end }}
         {{ if $notesEnabled }}
           <li class="nav-item">
-            <a class="nav-link" id="note-link" href="{{ "/posts" | relLangURL }}" target="_blank" rel="noopener">{{ i18n "posts" }}</a>
+            <a class="nav-link" id="blog-link" href="{{ "/notes" | relLangURL }}" target="_blank" rel="noopener">{{ i18n "posts" }}</a>
           </li>
         {{ end }}
         {{ range $customMenus }}
