--- a/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
+++ b/themes/tohaAcademic-Dhiman/layouts/partials/navigators/navbar.html
@@ -107,12 +107,12 @@
         {{ end }}
         {{ if $blogEnabled }}
           <li class="nav-item">
-            <a class="nav-link" id="blog-link" href="{{ "http://shailysbog.blogspot.com/" | relLangURL }}" target="_blank" rel="noopener">{{ i18n "posts" }}</a>
+            <a class="nav-link" id="blog-link" href="{{ "/posts" | relLangURL }}" target="_blank" rel="noopener">{{ i18n "posts" }}</a>
           </li>
         {{ end }}
         {{ if $notesEnabled }}
           <li class="nav-item">
-            <a class="nav-link" id="blog-link" href="{{ "/notes" | relLangURL }}" target="_blank" rel="noopener">{{ i18n "posts" }}</a>
+            <a class="nav-link" id="blog-link" href="{{ "/notes" | relLangURL }}" target="_blank" rel="noopener">{{ i18n "notes" }}</a>
           </li>
         {{ end }}
         {{ range $customMenus }}
